Removed Title Menu

--- a/app/scripts/layout/topnav.html
+++ b/app/scripts/layout/topnav.html
@@ -1,14 +1,15 @@
 <div style="background-color: rgba(60,60,60,0.5);height:80px;width:100%;box-shadow: 2px 2px 1px rgb(128,128,128);">
-    <div style="display:inline; padding-left:40px;"><img src="http://findicons.com/files/icons/770/token_dark/256/games.png" height="80px" width="80px" /></div>
-    <div style="display:inline">
+    <div class="nodrag" style="display:inline; padding-left:40px;"><img src="http://findicons.com/files/icons/770/token_dark/256/games.png" height="80px" width="80px" /></div>
+    <div class="nodrag" style="display:inline">
         <a href="#"><h3 style="color:white;display:inline;margin-left:30px;">Link 1</h3></a>
         <a href="#"><h3 style="color:white;display:inline;margin-left:30px;">Link 2</h3></a>
         <a href="#"><h3 style="color:white;display:inline;margin-left:30px;">Link 3</h3></a>
         <a href="#"><h3 style="color:white;display:inline;margin-left:30px;">Link 4</h3></a>
+        <button onclick="myFunction()">Click me</button>
     </div>
-    <div align="right" style="display:inline; ">
+    <div align="right" style="display:inline;">
         <form action="" class="search-form" style="display:inline; ">
-            <div class="form-group has-feedback">
+            <div class="form-group has-feedback nodrag">
                 <label for="search" class="sr-only">Search</label>
                 <input type="text" class="form-control" name="search" id="search" placeholder="search">
                 <span class="fa fa-search form-control-feedback"></span>
@@ -16,3 +17,4 @@
         </form>
     </div>
 </div>
+<script src="topnav.js"></script>
