--- a/app/scripts/layout/sidenav.html
+++ b/app/scripts/layout/sidenav.html
@@ -1,5 +1,5 @@
 <div class="col-md-2 col-sm-2 col-xs-2" style="padding-left:0px;"> 
-	<div style="color:white; background-color: rgba(0,0,0,0.6); height:498px;width:140px;" align="center">
+	<div class="nodrag" style="color:white; background-color: rgba(0,0,0,0.6); height:498px;width:140px;" align="center">
 		<a href="#dota"><div><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotalogo.png" height="60px" width="60px"/></div></a>
 		<a href="#wow"><div><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/wowlogo.png" height="60px" width="120px"/></div></a>
 		<a href="#cs"><div><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/cslogo.jpg" height="60px" width="120px"/></div></a>
