--- a/app/assets/css/searchbar.css
+++ b/app/assets/css/searchbar.css
@@ -1,52 +1,64 @@
 .search-form .form-group {
-float: right !important;
-transition: all 0.35s, border-radius 0s;
-width: 32px;
-height: 32px;
-background-color: #fff;
-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-border-radius: 25px;
-border: 1px solid #ccc;
-margin-right: 20px;
-margin-top: 25px;
+    position: absolute;
+    right:0px;
+    top: 35px;
+    transition: all 0.35s, border-radius 0s;
+    width: 32px;
+    height: 32px;
+    background-color: white;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    border-radius: 25px;
+    border: 1px solid #ccc;
+    margin-right: 26px;
+    color: black;
 }
+
 .search-form .form-group input.form-control {
-padding-right: 20px;
-border: 0 none;
-background: transparent;
-box-shadow: none;
-display:block;
+    border: 0 none;
+    background: transparent;
+    box-shadow: none;
+    display: block;
 }
+
 .search-form .form-group input.form-control::-webkit-input-placeholder {
-display: none;
+    display: none;
 }
+
 .search-form .form-group input.form-control:-moz-placeholder {
-/* Firefox 18- */
-display: none;
+    /* Firefox 18- */
+    display: none;
 }
+
 .search-form .form-group input.form-control::-moz-placeholder {
-/* Firefox 19+ */
-display: none;
+    /* Firefox 19+ */
+    display: none;
 }
+
 .search-form .form-group input.form-control:-ms-input-placeholder {
-display: none;
+    display: none;
 }
+
 .search-form .form-group:hover,
 .search-form .form-group.hover {
-width: 20%;
-border-radius: 4px 25px 25px 4px;
+    width: 20%;
+    border-radius: 4px 25px 25px 4px;
 }
+
 .search-form .form-group span.form-control-feedback {
-position: absolute;
-top: -1px;
-right: -2px;
-z-index: 2;
-display: block;
-width: 34px;
-height: 34px;
-line-height: 34px;
-text-align: center;
-color: #3596e0;
-left: initial;
-font-size: 14px;
+    position: absolute;
+    top: -1px;
+    right: -2px;
+    z-index: 2;
+    display: block;
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    color: black;
+    left: initial;
+    font-size: 14px;
+    /*margin-right: 30px;*/
+    right: 0px;
 }
+
+    
