--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,3 +1,17 @@
 .nodrag {
     -webkit-app-region: no-drag;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {}
+
+a:active {
+    text-decoration: none;
+}
