--- a/app/scripts/layout/topnav.html
+++ b/app/scripts/layout/topnav.html
@@ -2,14 +2,14 @@
 
     <div class="nodrag" style="cursor: pointer;display:inline; padding-left:40px;">
         <a href="#home">
-            <img src="http://findicons.com/files/icons/770/token_dark/256/games.png" height="80px" width="80px" />
+            <div style="display: inline-block;height:80px; width:80px" class="iconimage"><img src="http://findicons.com/files/icons/770/token_dark/256/games.png" width="100%" height="100%" /></div>
         </a>
     </div>
     <div class="nodrag" style="display:inline">
-        <a href="#"><h3 style="color:white;display:inline;margin-left:20px;">News</h3></a>
-        <a href="#"><h3 style="color:white;display:inline;margin-left:20px;">Fixtures</h3></a>
-        <a href="#"><h3 style="color:white;display:inline;margin-left:20px;">Competitions</h3></a>
-        <a href="#"><h3 style="color:white;display:inline;margin-left:20px;">Resources</h3></a>
+        <a href="#"><div class="toplink">News</div></a>
+        <a href="#"><div class="toplink">Fixtures</div></a>
+        <a href="#"><div class="toplink">Competitions</div></a>
+        <a href="#"><div class="toplink">Resources</div></a>
     </div>
     <div>
         <form action=" " class="search-form">
