--- a/app/scripts/layout/sidenav.html
+++ b/app/scripts/layout/sidenav.html
@@ -1,38 +1,38 @@
 <div class="col-md-2 col-sm-2 col-xs-2" style="padding-left:0px;">
     <div class="hidden-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:498px;width:140px;" align="center">
-        <a href="#dota">
-            <div class="iconimage"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="80px" width="80px" /></div>
+        <a href="#dotanews">
+            <div class="iconimage" onclick="changeGame('dota')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="80px" width="80px" /></div>
             <div style="margin-top: -15px;color: white;text-decoration: none;">DOTA 2</div>
         </a>
-        <a href="#wow">
-            <div class="iconimage"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/wowicon.png" height="80px" width="80px" /></div>
+        <a href="#wownews">
+            <div class="iconimage" onclick="changeGame('wow')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/wowicon.png" height="80px" width="80px" /></div>
             <div style="margin-top: -15px;color: white;text-decoration: none;">World of Warcraft</div>
         </a>
-        <a href="#cs">
-            <div class="iconimage"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/csicon.png" height="80px" width="80px" /></div>
+        <a href="#csnews">
+            <div class="iconimage" onclick="changeGame('cs')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/csicon.png" height="80px" width="80px" /></div>
             <div style="margin-top: -15px;color: white;text-decoration: none;">Counter Strike</div>
         </a>
-        <a href="#starcraft">
-            <div class="iconimage"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/starcrafticon.png" height="80px" width="80px" /></div>
+        <a href="#starcraftnews">
+            <div class="iconimage" onclick="changeGame('starcraft')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/starcrafticon.png" height="80px" width="80px" /></div>
             <div style="margin-top: -15px;color: white;text-decoration: none;">Starcraft</div>
         </a>
     </div>
     <form>
         <div class="visible-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:560px;width:200px;" align="center">
-            <a href="#dota">
-                <div class="iconimage"><img id="dotaLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="120px" width="120px" /></div>
+            <a href="#dotanews">
+                <div class="iconimage" onclick="changeGame('dota')"><img id="dotaLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="120px" width="120px" /></div>
                 <div style="margin-top: -15px;color: white;text-decoration: none;">DOTA 2</div>
             </a>
-            <a href="#wow">
-                <div class="iconimage"><img id="wowLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/wowicon.png" height="120px" width="120px" /></div>
+            <a href="#wownews">
+                <div class="iconimage" onclick="changeGame('wow')"><img id="wowLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/wowicon.png" height="120px" width="120px" /></div>
                 <div style="margin-top: -15px;color: white;text-decoration: none;">World of Warcraft</div>
             </a>
-            <a href="#cs">
-                <div class="iconimage"><img id="csLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/csicon.png" height="120px" width="120px" /></div>
+            <a href="#csnews">
+                <div class="iconimage" onclick="changeGame('cs')"><img id="csLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/csicon.png" height="120px" width="120px" /></div>
                 <div style="margin-top: -15px;color: white;text-decoration: none;">Counter Strike</div>
             </a>
-            <a href="#starcraft">
-                <div class="iconimage"><img id="starcraftLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/starcrafticon.png" height="120px" width="120px" /></div>
+            <a href="#starcraftnews">
+                <div class="iconimage" onclick="changeGame('starcraft')"><img id="starcraftLink" style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/starcrafticon.png" height="120px" width="120px" /></div>
                 <div style="margin-top: -15px;color: white;text-decoration: none;">Starcraft</div>
             </a>
         </div>
