Modified Dota Fixtures and the Scroll bar

--- a/app/scripts/layout/sidenav.html
+++ b/app/scripts/layout/sidenav.html
@@ -1,5 +1,5 @@
 <div class="col-md-2 col-sm-2 col-xs-2" style="padding-left:0px;">
-    <div class="hidden-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:498px;width:140px;" align="center">
+    <div class="hidden-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:88vh;width:140px;" align="center">
         <a href="#dotanews">
             <div id="dotaLink" class="iconimage" onclick="changeGame('dota')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="80px" width="80px" /></div>
             <div style="margin-top: -15px;color: white;text-decoration: none;">DOTA 2</div>
@@ -17,22 +17,22 @@
             <div style="margin-top: -15px;color: white;text-decoration: none;">Starcraft</div>
         </a>
     </div>
-        <div class="visible-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:560px;width:200px;" align="center">
-            <a href="#dotanews">
-                <div id="dotaLink" class="iconimage" onclick="changeGame('dota')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="120px" width="120px" /></div>
-                <div style="margin-top: -15px;color: white;text-decoration: none;">DOTA 2</div>
-            </a>
-            <a href="#wownews">
-                <div id="wowLink" class="iconimage" onclick="changeGame('wow')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/wowicon.png" height="120px" width="120px" /></div>
-                <div style="margin-top: -15px;color: white;text-decoration: none;">World of Warcraft</div>
-            </a>
-            <a href="#csnews">
-                <div id="csLink" class="iconimage" onclick="changeGame('cs')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/csicon.png" height="120px" width="120px" /></div>
-                <div style="margin-top: -15px;color: white;text-decoration: none;">Counter Strike</div>
-            </a>
-            <a href="#starcraftnews">
-                <div id="starcraftLink" class="iconimage" onclick="changeGame('starcraft')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/starcrafticon.png" height="120px" width="120px" /></div>
-                <div style="margin-top: -15px;color: white;text-decoration: none;">Starcraft</div>
-            </a>
-        </div>
+    <div class="visible-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:88vh;width:200px;" align="center">
+        <a href="#dotanews">
+            <div id="dotaLink" class="iconimage" onclick="changeGame('dota')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="110px" width="110px" /></div>
+            <div style="margin-top: -15px;color: white;text-decoration: none;">DOTA 2</div>
+        </a>
+        <a href="#wownews">
+            <div id="wowLink" class="iconimage" onclick="changeGame('wow')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/wowicon.png" height="110px" width="110px" /></div>
+            <div style="margin-top: -15px;color: white;text-decoration: none;">World of Warcraft</div>
+        </a>
+        <a href="#csnews">
+            <div id="csLink" class="iconimage" onclick="changeGame('cs')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/csicon.png" height="110px" width="110px" /></div>
+            <div style="margin-top: -15px;color: white;text-decoration: none;">Counter Strike</div>
+        </a>
+        <a href="#starcraftnews">
+            <div id="starcraftLink" class="iconimage" onclick="changeGame('starcraft')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/starcrafticon.png" height="110px" width="110px" /></div>
+            <div style="margin-top: -15px;color: white;text-decoration: none;">Starcraft</div>
+        </a>
+    </div>
 </div>
