--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -16,34 +16,49 @@ a:active {
     text-decoration: none;
 }
 
+
 /*SideNav*/
 
 .iconimage img {
-    -webkit-transition: all 1s ease; /* Safari and Chrome */
-    -moz-transition: all 1s ease; /* Firefox */
-    -ms-transition: all 1s ease; /* IE 9 */
-    -o-transition: all 1s ease; /* Opera */
+    -webkit-transition: all 1s ease;
+    /* Safari and Chrome */
+    -moz-transition: all 1s ease;
+    /* Firefox */
+    -ms-transition: all 1s ease;
+    /* IE 9 */
+    -o-transition: all 1s ease;
+    /* Opera */
     transition: all 1s ease;
 }
 
 .iconimage:hover img {
-    -webkit-transform:scale(1.2); /* Safari and Chrome */
-    -moz-transform:scale(1.2); /* Firefox */
-    -ms-transform:scale(1.2); /* IE 9 */
-    -o-transform:scale(1.2); /* Opera */
-     transform:scale(1.2);
+    -webkit-transform: scale(1.2);
+    /* Safari and Chrome */
+    -moz-transform: scale(1.2);
+    /* Firefox */
+    -ms-transform: scale(1.2);
+    /* IE 9 */
+    -o-transform: scale(1.2);
+    /* Opera */
+    transform: scale(1.2);
 }
+
 .active {
     background-color: rgba(0, 80, 120, 0.5)
 }
+
 .inactive {
     background-color: rgba(0, 80, 120, 0)
 }
 
+
 /*TopNav*/
+
 .toplink {
     font-size: 25px;
-    color:white;display:inline;margin-left:20px;
+    color: white;
+    display: inline;
+    margin-left: 20px;
 }
 
 .toplink:hover {
@@ -68,4 +83,58 @@ a:active {
     position: absolute;
     right: 0px;
     top: 0px;
+}
+
+
+/*Scrollbar*/
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+
+/* this targets the default scrollbar (compulsory) */
+
+
+/*::-webkit-scrollbar-track {
+    background-color: rgba(50, 50, 200, 0.7);
+}*/
+
+
+/* the new scrollbar will have a flat appearance with the set background color */
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(160, 160, 160, 0.7);
+    border-bottom-left-radius: 28.5px;
+    border-bottom-right-radius: 28.5px;
+    border-top-left-radius: 28.5px;
+    border-top-right-radius: 28.5px;
+}
+
+
+/* this will style the thumb, ignoring the track */
+
+
+/*::-webkit-scrollbar-button:vertical:decrement {
+    background-color: rgba(0, 0, 200, 0.7);
+    border-top-left-radius: 18.5px;
+    border-top-right-radius: 18.5px;
+}*/
+
+
+/* optionally, you can style the top and the bottom buttons (left and right for horizontal bars) */
+
+
+/*::-webkit-scrollbar-button:vertical:increment {
+    background-color: rgba(0, 0, 200, 0.7);
+    border-bottom-left-radius: 18.5px;
+    border-bottom-right-radius: 18.5px;
+}
+*/
+
+
+/* optionally, you can style the top and the bottom buttons (left and right for horizontal bars) */
+
+::-webkit-scrollbar-corner {
+    background-color: black;
 }
