Added shadow to sidenav

--- a/app/scripts/layout/sidenav.html
+++ b/app/scripts/layout/sidenav.html
@@ -1,5 +1,5 @@
 <div class="col-md-2 col-sm-2 col-xs-2" style="padding-left:0px;">
-    <div class="hidden-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:88vh;width:140px;" align="center">
+    <div class="hidden-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:88vh;width:140px;box-shadow: 2px 2px 1px rgb(128,128,128);" align="center">
         <a href="#dotanews">
             <div id="dotaLink" class="iconimage" onclick="changeGame('dota')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="80px" width="80px" /></div>
             <div style="margin-top: -15px;color: white;text-decoration: none;">DOTA 2</div>
@@ -17,7 +17,7 @@
             <div style="margin-top: -15px;color: white;text-decoration: none;">Starcraft</div>
         </a>
     </div>
-    <div class="visible-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:88vh;width:200px;" align="center">
+    <div class="visible-lg" style="color:white; background-color: rgba(0,0,0,0.6); height:88vh;width:200px;box-shadow: 2px 2px 1px rgb(128,128,128);" align="center">
         <a href="#dotanews">
             <div id="dotaLink" class="iconimage" onclick="changeGame('dota')"><img style="margin-top: 10px; margin-bottom: 10px;" src="././assets/images/dotaicon.png" height="110px" width="110px" /></div>
             <div style="margin-top: -15px;color: white;text-decoration: none;">DOTA 2</div>
