--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -66,7 +66,7 @@ margin-right: 5px;
 cursor: pointer;
 color: darkgrey;
 }
-.menuIcons {
+#menuIcons {
 position: absolute;
 right: 0px;
 top: 0px;
@@ -112,4 +112,27 @@ background-color: black;
 #comp-button:hover{
     background-color: white;
     color: black;
+}
+#topNavLinks{display:inline-block;}
+
+    .hidenav{
+        visibility: hidden;
+    }
+
+    #homeLink{
+        display: inline-block; 
+        margin-left: 37px;
+        margin-top: 10px;
+    }
+
+    #sideNavText{
+    margin-top: -15px;color: white;text-decoration: none;
+}
+
+.gameImage{
+	margin-top: 10px; margin-bottom: 10px;
+}
+
+#sideNav{
+	color:white; background-color: rgba(0,0,0,0.6); height:88vh;width:140px;box-shadow: 2px 2px 1px rgb(128,128,128);
 }
