--- a/app/scripts/layout/sidenav.html
+++ b/app/scripts/layout/sidenav.html
@@ -5,8 +5,8 @@
             <div id="sideNavText">DOTA 2</div>
         </a>
         <a href="#wownews">
-            <div id="wowLink" class="iconimage" onclick="changeGame('wow')"><img class="gameImage" src="././assets/images/wowicon.png" height="80px" width="80px" /></div>
-            <div id="sideNavText">World of Warcraft</div>
+            <div id="wowLink" class="iconimage" onclick="changeGame('wow')"><img class="gameImage" src="././assets/images/overwatchicon.png" height="80px" width="80px" /></div>
+            <div id="sideNavText">Overwatch</div>
         </a>
         <a href="#csnews">
             <div id="csLink" class="iconimage" onclick="changeGame('cs')"><img class="gameImage" src="././assets/images/csicon.png" height="80px" width="80px" /></div>
